2013-11-25  Yufeng Zhang  <yufeng.zhang@arm.com>

	Backport from master

	2013-11-21  Andrew Pinski  <apinski@cavium.com>

	* Makefile.am (ALL_64_EMULATION_SOURCES): Add eaarch64linux32.c
	and eaarch64linux32b.c
	(eaarch64linux32.c): New target.
	(eaarch64linux32b.c): Likewise.
	* Makefile.in: Regenerate.
	* configure.tgt (aarch64_be-*-linux*): Add
	aarch64linux32 and aarch64linux32b to targ_extra_libpath.
	(aarch64-*-linux*): Likewise.
	* emulparams/aarch64elf32.sh (SEPARATE_GOTPLT): Change to 12 (3 words).
	* emulparams/aarch64linux32.sh: New file.
	* emulparams/aarch64linux32b.sh: New file.

2013-11-25  Yufeng Zhang  <yufeng.zhang@arm.com>

	Backport from master

	2013-11-21  Andrew Pinski  <apinski@cavium.com>

	* configure.tgt (aarch64_be-*-linux*): Split out the linux targets
	into targ_extra_libpath.
	(aarch64-*-linux*): Likewise.

2013-11-22  Cory Fields  <cory@coryfields.com>

	* libcoff-in.h: Add insert_timestamp flag to the pe_data struct.
	* libcoff.h: Regenerate.
	* peXXigen.c (_bfd_XXi_only_swap_filehdr_out): Only use a real
	timestamp if --insert-timestamp was used.

2013-11-19  Roland McGrath  <mcgrathr@google.com>
	    Alan Modra  <amodra@gmail.com>

	* emultempl/elf32.em (gld${EMULATION_NAME}_before_allocation):
	Don't use bfd_elf_record_link_assignment to mark __ehdr_start
	hidden.  Instead, just do it directly here, and only if it was
	referenced but not defined.

2013-11-18  Chung-Lin Tang  <cltang@codesourcery.com>

	Backport from master
	2013-11-18  Chung-Lin Tang  <cltang@codesourcery.com>
	* emulparams/nios2linux.sh: New emulation file.
	* configure.tgt: Add nios2*-*-linux* emulation case.
	* Makefile.am (enios2elf.c): Change tdir_nios2 to tdir_nios2elf.
	(enios2linux.c): New emulation entry.
	* Makefile.in: Regenerate.

2013-11-15  Alan Modra  <amodra@gmail.com>

	Apply mainline changes to 2.24
	2013-09-24  Alan Modra  <amodra@gmail.com>
	* emulparams/elf32ppccommon.sh (LIBPATH_SUFFIX): Provide 32-bit
	and cross-endian values.